--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,4 +22,5 @@ jobs:
 
     - name: Run tests with coverage
       run: |
-        pytest --cov=my_module tests/
+        coverage run -m pytest tests/
+        coverage report
